--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "slides_jsfunctions",
+  "name": "slides_handsonjs",
   "description": "RayVeal.js, the markdown first slide framework based on the awesome reveal.js",
   "repository": "http://github.com/planetoftheweb/rayveal",
   "license": "MIT",
